[package]
name = "trusted-dealer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic-ec = { git = "https://github.com/dfns-labs/generic-ec", branch = "m", features = ["serde", "curve-secp256k1"] }
generic-ec-zkp = { git = "https://github.com/dfns-labs/generic-ec", branch = "m", features = ["serde"] }

ciborium = "0.2"
openssl = { version = "0.10", default-features = false }
rand_core = "0.6"
serde = "1"

[dev-dependencies]
cggmp21 = { git = "https://github.com/dfns-labs/cggmp21", features = ["spof"] }
