[package]
name = "trusted-dealer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic-ec = { git = "https://github.com/dfns-labs/generic-ec", branch = "m", features = ["serde", "curve-secp256k1"] }
generic-ec-zkp = { git = "https://github.com/dfns-labs/generic-ec", branch = "m", features = ["serde"] }

ciborium = "0.2"
rand_core = { verison = "0.6", default-features = false }
serde = "1"

getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
cggmp21 = { git = "https://github.com/dfns-labs/cggmp21", features = ["spof"] }
