[workspace]
resolver = "2"
members = [
  "./key-import-common",
  "./key-import-client",
  "./key-export-common",
  "./key-export-client",
  "./core",
]

[patch.crates-io.generic-ec]
git = "https://github.com/dfns/generic-ec"
branch = "nonzero-cmp"
[patch.crates-io.generic-ec-zkp]
git = "https://github.com/dfns/generic-ec"
branch = "nonzero-cmp"
