[package]
name = "dfns-key-import-common"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
generic-ec = { git = "https://github.com/dfns-labs/generic-ec", branch = "m", default-features = false, features = ["serde", "curve-secp256k1", "wasm"] }
generic-ec-zkp = { git = "https://github.com/dfns-labs/generic-ec", branch = "m", default-features = false, features = ["serde", "alloc"] }

ciborium = "0.2"
rand_core = { version = "0.6", default-features = false }
serde = "1"

aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"

[dev-dependencies]
cggmp21 = { git = "https://github.com/dfns-labs/cggmp21", features = ["spof"] }
rand_dev = "0.1"