[package]
name = "dfns-trusted-dealer-core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
generic-ec = { git = "https://github.com/dfns-labs/generic-ec", branch = "m", default-features = false, features = ["serde", "curve-secp256k1", "wasm"] }

rand_core = { version = "0.6", default-features = false }
serde = "1"
hex = { version = "0.4", default-features = false, features = ["alloc", "serde"]}
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"

[dev-dependencies]
rand_dev = "0.1"
serde_json = "1"

[features]
std = []