[package]
name = "dfns-trusted-dealer-core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
generic-ec = { version = "0.2", default-features = false, features = ["serde", "curve-secp256k1"] }

rand_core = { version = "0.6", default-features = false }
serde = "1"
base64 = "0.21"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"
wasm-bindgen = { version = "0.2", optional = true}

[dev-dependencies]
rand_dev = "0.1"
serde_json = "1"

[features]
std = []
wasm = ["dep:wasm-bindgen"]
