[package]
name = "dfns-trusted-dealer-core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
generic-ec = { version = "0.2", default-features = false, features = ["serde", "curve-secp256k1", "curve-stark", "curve-ed25519"] }

rand_core = { version = "0.6", default-features = false }
serde = "1"
base64 = "0.21"
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

[dev-dependencies]
rand_dev = "0.1"
serde_json = "1"

[features]
std = []
