[package]
name = "dfns-key-export-client"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dfns-encryption = { path = "../encryption" }
dfns-key-export-common = { path = "../key-export-common" }
generic-ec = { git = "https://github.com/dfns-labs/generic-ec", branch = "m", default-features = false, features = ["serde", "curve-secp256k1", "wasm"] }
generic-ec-zkp = { git = "https://github.com/dfns-labs/generic-ec", branch = "m", default-features = false, features = ["serde", "alloc"] }

wasm-bindgen = "0.2.84"
serde_json = "1"
rand_core = { version = "0.6", default-features = false }

[dev-dependencies]
hex = { version = "0.4", default-features = false, features = ["alloc", "serde"]}
dfns-key-import-common = { path = "../key-import-common" }
rand_dev = "0.1"