[package]
name = "dfns-key-export-client"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
common = { package = "dfns-trusted-dealer-common", path = "../common", features = ["export"] }
generic-ec = { version = "0.2", default-features = false, features = ["serde", "curve-secp256k1", "curve-stark", "curve-ed25519"] }
generic-ec-zkp = { version = "0.2", default-features = false, features = ["serde", "alloc"] }
zeroize = { version = "1.7", default-features = false, features = ["alloc"]}

serde_json = "1"
rand_core = { version = "0.6", default-features = false }
base64 = "0.21"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
rand_dev = "0.1"
