[package]
name = "dfns-key-export"
version = "0.1.0"
edition = "2021"
publish = false

license = "MIT OR Apache-2.0"
repository = "https://github.com/dfns/trusted-dealer"
description = "Cryptography code for exporting a key from Dfns"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
common = { package = "dfns-trusted-dealer-common", path = "../common", features = ["export"] }
generic-ec = { version = "0.2", default-features = false, features = ["serde", "curve-secp256k1", "curve-stark", "curve-ed25519"] }
generic-ec-zkp = { version = "0.2", default-features = false, features = ["serde", "alloc"] }
zeroize = { version = "1.7", default-features = false, features = ["alloc"]}

serde_json = "1"
rand_core = { version = "0.6", default-features = false }
base64 = "0.21"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
rand = "0.8"
rand_dev = "0.1"
generic-tests = "0.1"
test-case = "3" 
key-share = { version = "0.2", features = ["spof"] }
