[package]
name = "dfns-key-import"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.84"
serde_json = "1"
serde-wasm-bindgen = "0.4"
getrandom = { version = "0.2", features = ["js"] }

dfns-key-import-common = { path = "../key-import-common" }
dfns-trusted-dealer-core = { path = "../core", features = [ "wasm" ]}
