[package]
name = "dfns-key-import"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde_json = "1"

dfns-key-import-common = { path = "../key-import-common" }
dfns-trusted-dealer-core = { path = "../core" }

zeroize = { version = "1.7", default-features = false, features = ["alloc"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
